--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,14 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+      
+      - name: Copy .nojekyll to dist
+        run: |
+          if [ -f .nojekyll ]; then
+            cp .nojekyll dist/.nojekyll
+          else
+            touch dist/.nojekyll
+          fi
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
